hphp/hack/test/typecheck/suspend_operator_err15.php.exp
File "suspend_operator_err15.php", line 7, characters 5-5:
Invalid argument (Typing[4173])
File "suspend_operator_err15.php", line 3, characters 12-38:
This is a coroutine.
File "suspend_operator_err15.php", line 7, characters 5-5:
This is not a coroutine.
