hphp/hack/test/typecheck/suspend_operator_err15.php
<?hh // strict

function a((coroutine function(): int) $a): void {}

function b(): void {
  // not ok - regular function is not compatible with coroutine
  a(() ==> 1);
}
